# valjean-nnet

./: .gitignore  CMakeLists.txt  README.md  accumulator.vhd  anneal.c  anneal.h  axi_fp.c  axi_fp.h  axi_interface.vhd  axi_tb.vhdl  axi_tb_behav4.wcfg  binarised_bp.c  binarised_bp.h  binarised_bp_test.c  binarised_fp.c  binarised_fp.h  binarised_fp_test.c  bit_count_gen.c  bnn.c  bnn.h  bnn_ip.vhd  bnorm.c  bnorm.h  config.h  constants.h  control.vhd  data_format.c  data_types.vhd  dataset.c  dataset.h  dataset_test.c  design_1_wrapper.bit  energy.c  energy.h  error_handling.h  generator.c  image_format.c  label_format.c  math_test.c  mnist_int8_input.c  (+17 more)
bnn/bnn/: config.h
bnn_ip/: bnn_ip.xpr
bnn_ip/bnn_ip.cache/wt/: gui_resources.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
bnn_ip/bnn_ip.runs/.jobs/: vrs_config_1.xml
bnn_ip/bnn_ip.runs/synth_1/: .vivado.begin.rst  bnn_v1_0.dcp  bnn_v1_0.tcl  bnn_v1_0.vds  bnn_v1_0_utilization_synth.rpt  gen_run.xml  htr.txt  project.wdf  rundef.js  runme.sh
bnn_rtl/: bnn_rtl.xpr
bnn_rtl/bnn_rtl.cache/wt/: gui_resources.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
bnn_rtl/bnn_rtl.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml
bnn_rtl/bnn_rtl.runs/impl_1/: .init_design.begin.rst  .vivado.begin.rst  gen_run.xml  init_design.pb  opt_design.pb  project.wdf  runme.sh  system_wrapper.hwdef  system_wrapper.tcl  system_wrapper.vdi
bnn_rtl/bnn_rtl.runs/synth_1/: .vivado.begin.rst  dont_touch.xdc  gen_run.xml  runme.sh  system_wrapper.dcp  system_wrapper.tcl  system_wrapper.vds  system_wrapper_utilization_synth.rpt
bnn_rtl/bnn_rtl.runs/system_auto_pc_0_synth_1/: .vivado.begin.rst  dont_touch.xdc  gen_run.xml  rundef.js  runme.sh  system_auto_pc_0.dcp  system_auto_pc_0.tcl  system_auto_pc_0.vds  system_auto_pc_0_utilization_synth.rpt
bnn_rtl/bnn_rtl.runs/system_bnn_0_0_synth_1/: .vivado.begin.rst  gen_run.xml  htr.txt  rundef.js  runme.sh  system_bnn_0_0.dcp  system_bnn_0_0.tcl  system_bnn_0_0.vds  system_bnn_0_0_utilization_synth.pb  system_bnn_0_0_utilization_synth.rpt
bnn_rtl/bnn_rtl.runs/system_processing_system7_0_0_synth_1/: .vivado.begin.rst  dont_touch.xdc  gen_run.xml  (+5 more)
bnn_v1_0_project/: bnn_v1_0_project.xpr
custom_ip/: custom_ip.xpr
custom_ip/axi_ip_demo_1.0/: component.xml
custom_ip/axi_ip_demo_v1_0_project/: axi_ip_demo_v1_0_project.xpr
custom_ip/custom_ip.sdk/: design_1_wrapper.hdf
floatsrc/: Makefile  generator.c  nnet.c  nnet_math.c  nnet_math.h
hdl/: axi_interface.vhd  axi_tb.vhdl  binarised_buffer.vhd  bioram.vhd  data_types.vhd  oreg.vhd  wram.vhd
ip_repo/bnn_1.0/: component.xml
(+799 files in other folders)
